# itis-vm-repl

./: LICENSE.txt  README.md  TODO.md  bootstrap.sh  pyproject.toml
src/itis_vm_repl/: __about__.py  __init__.py  __main__.py  interactive_command.py
src/itis_vm_repl/cli/: __init__.py
