[tool.poetry.scripts]
watson2sf = "itis_vm_repl:cli"

[tool.poetry]
name = "itis_vm_repl"
version = "0.0.1"
description = ""
authors = ["Tom Moyer <tommoyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-repl = "^0.3.0"
prompt-toolkit = "^3.0.39"
lxc = "^3.0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# dependencies = [
#   "click",
#   "click_repl",
#   "prompt_toolkit",
#   "lxc",
# ]
