[tool.poetry.scripts]
repl = "itis_vm_repl:app"

[tool.poetry]
name = "itis_vm_repl"
version = "0.0.2"
description = ""
authors = ["Tom Moyer <tommoyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.3"
click-repl = "^0.3.0"
prompt-toolkit = "^3.0.39"
importlib-metadata = "^6.8.0"
pyyaml = "^6.0.1"
rich = "^13.4.2"
typer = {extras = ["all"], version = "^0.9.0"}
typer-shell = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
